syntax = "proto3";

package devcloud.mcenter.service;
option go_package = "github.com/hezihua/devplat/mcenter/apps/service";

import "common/meta/meta.proto";


message ServiceSet {
  // 用户总数
  // @gotags: json:"total"
  int64 total = 1;
  // 用户列表
  //@gotags: json:"items"
  repeated Service items = 2;
}


message Service {
  // @gotags: bson:",inline" json:"meta"
  meta.Meta meta = 1;

  
  // @gotags: bson:",inline" json:"spec"
  CreateServiceRequest spec = 15;
  // @gotags: bson:"credential" json:"credentail"
  Crendential credential = 2;
}

message Crendential {
   // @gotags: bson:"client_id" json: "client_id"
   string client_id = 1;
   // @gotags: bson:"client_secret" json: "client_secret"
   string client_secret = 2;
   // @gotags: bson:"create_at" json: "create_at"
   int64 create_at = 3;
}

message CreateServiceRequest {
  // @gotags: bson:"domain" json: "domain" validate:"required"
  string domain = 1;
  // @gotags: bson:"namespace" json: "namespace" validate:"required"
  string namespace = 2;
  // @gotags: bson:"name" json: "name" validate:"required"
  string name = 3;
  
}